--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -188,3 +188,237 @@
 
 
 
+ -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/b07b6354a3.js" crossorigin="anonymous"></script>
+</head>
+<body>
+    <div id = "header" data-aos="fade-down">
+        <div class = "container">
+            <nav>
+                <!-- <img src = "images/logo.png" class = "logo"> -->
+                <h1 data-aos="fade-down">Openair</h1>
+                <ul id = "sidemenu" data-aos="slide-down">
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <i class="fas fa-xmark" onclick="closemenu()"></i>
+                </ul>
+                <i class="fas fa-bars" onclick="openmenu()"></i>
+            </nav>
+            <div class="header-text" data-aos="slide-up">
+                <p>Web Developer</p>
+                <h1>Hi, I'm <span class = "auto-type">Raj</span><br>I am from Satna</h1>
+            </div>
+        </div>
+    </div>
+    <!-- -------------------about---------------------- -->
+    <div id = "about" data-aos="fade">
+        <div class = "container">
+            <div class = "row">
+                <div class="about-col-1">
+                    <img src="images/user.png">
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title" id = "aboutme">About Me</h1>
+                    <p>My name is Raj Aishwary Pratap Singh. I am a third-year student at Lovely Professional University pursuing a bachelor's degree in Computer Science and Engineering. I am passionate about competitive programming and web development. My programming skills include C, C++, Java, and Python. Also I am well versed in HTML, CSS and Javascript in web development, and I'm currently learning emerging frameworks such as Reach.Js, Node.Js etc.</p>
+                    <div class="tab-titles">
+                        <p class = "tab-links active-link" onclick = "opentab('skills')">Skills</p>
+                        <p class = "tab-links" onclick = "opentab('experience')">Experience</p>
+                        <p class = "tab-links" onclick = "opentab('education')">Education</p>
+                    </div>
+                    <div class="tab-contents active-tab" id = "skills"> 
+                        <ul>
+                            <li><span>UI/UX 1</span><br>Designing Web/App interfaces 1</li>
+                            <li><span>Web Development 1</span><br>Web app Development 1</li>
+                            <li><span>App Development 1</span><br>Building Android/ios apps 1</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id = "experience">
+                        <ul>
+                            <li><span>UI/UX 2</span><br>Designing Web/App interfaces 2</li>
+                            <li><span>Web Development 2</span><br>Web app Development 2</li>
+                            <li><span>App Development 2</span><br>Building Android/ios apps 2</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id = "education">
+                        <ul>
+                            <li><span>Lovely Professional University, Jalandhar</span><br>Designing Web/App interfaces 3</li>
+                            <li><span>Simran Public School, Maihar</span><br>Web app Development 3</li>
+                            <li><span>Sarla Higher Secondary School, Maihar</span><br>Building Android/ios apps 3</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!----------------------services------------------------------->
+    <div id = "services" data-aos="fade-right">
+        <div class = "container">
+            <h1 class="sub-title" id="myservices">My Services</h1>
+            <div class="services-list">
+                <div>
+                    <i class="fa-solid fa-code"></i>      
+                    <!-- html code for icon from fontawesome.com -->
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium eaque facilis, explicabo dolorum ad veniam dicta! Quam vitae enim aliquam. Vero unde dignissimos culpa eaque voluptatibus quia eveniet iusto nisi!</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div>
+                    <i class="fa-sharp fa-solid fa-crop"></i>
+                    <h2>UI/UX Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium eaque facilis, explicabo dolorum ad veniam dicta! Quam vitae enim aliquam. Vero unde dignissimos culpa eaque voluptatibus quia eveniet iusto nisi!</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div>
+                    <i class="fa-brands fa-app-store"></i>
+                    <h2>App Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium eaque facilis, explicabo dolorum ad veniam dicta! Quam vitae enim aliquam. Vero unde dignissimos culpa eaque voluptatibus quia eveniet iusto nisi!</p>
+                    <a href="#">Learn more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- -------------------portfolio--------------------- -->
+    <div id="portfolio" data-aos="fade-left">
+        <div class="container">
+            <h1 class="sub-title" id = "mywork">My Work</h1>
+            <div class = "work-list">
+                <div class="work">
+                    <img src="images/img1.png">
+                    <div class="layer">
+                        <h3>Social Media App</h3>
+                        <p>the app connects you to the talented people around the world. Download it from play store.</p>
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/work-2.png">
+                    <div class="layer">
+                        <h3>Music App</h3>
+                        <p>the app connects you to the talented people around the world. Download it from play store.</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/work-3.png">
+                    <div class="layer">
+                        <h3>Online Shopping App</h3>
+                        <p>the app connects you to the talented people around the world. Download it from play store.</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="btn">See more</a>
+        </div>
+    </div>
+
+    <!-- ----------------------contact------------------- -->
+    <div id = "contact" data-aos="fade-up">
+        <div class = "container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class = "sub-title" id = "contactme">Contact Me</h1>
+                    <!-- class="fa-solid fa- is imported from online website -->
+                    <p><i class="fa-solid fa-paper-plane"></i> rajaishwaryasingh@example.com</p>
+                    <p><i class="fa-solid fa-phone"></i> +918319615454</p>
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/rajaishwary.pratapsingh" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://github.com/rajaishwary30" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.instagram.com/rajaishwary_/" target="_blank"><i class="fa-brands fa-instagram"></i></i></a>
+                        <a href="https://www.linkedin.com/in/raj-aishwary/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                    <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                </div>
+                <div class="contact-right">
+                    <form name="submit-to-google-sheet">
+                        <input type="text" name="Name" placeholder="Your Name" required>
+                        <input type="email" name="Email" placeholder="Your Email" required>
+                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                        <button type="submit" class="btn btn2">Submit</button>
+                    </form>
+                    <span id="msg"></span>
+                </div>
+            </div>
+        </div>
+
+        <!-- -------------------------------copyright--------------------------------- -->
+        <div class="copyright">
+            <p>Copyright © Raj. Made with <i class="fa-solid fa-heart"></i> by Raj </p>
+        </div>
+        <!-- ------------------------------------------------------------------------- -->
+        
+    </div>
+    <!-- this cdn file javascript we have imported for auto-typing -->
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script>
+        var typed = new Typed(".auto-type", {
+            strings: ["Raj Aishwary", "Raj Aishwary", "a competitive programmer", "a Web Developer"],
+            typeSpeed: 150,
+            backspeed: 150,
+            loop: true
+        })
+    </script>
+    <script>
+        var tablinks = document.getElementsByClassName("tab-links");
+        var tabcontents = document.getElementsByClassName("tab-contents");
+        function opentab(tabname){
+            for(tablink of tablinks){
+                tablink.classList.remove("active-link");
+            }
+            for(tabcontent of tabcontents){
+                tabcontent.classList.remove("active-tab");
+            }
+            event.currentTarget.classList.add("active-link");
+            document.getElementById(tabname).classList.add("active-tab");
+        }
+    </script>
+    <script>
+        var sidemenu = document.getElementById("sidemenu");
+        function openmenu(){
+            sidemenu.style.right = "0";
+        }
+        function closemenu(){
+            sidemenu.style.right = "-200px";
+        }
+    </script>
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbxSo-sVuKYsQfVm3QU_uEm43r5nSuKQmHWAODAhtD6xkBzSatygy2xYSH5nf_dOkEzyag/exec'
+        const form = document.forms['submit-to-google-sheet']
+        const msg = document.getElementById("msg")
+      
+        form.addEventListener('submit', e => {
+          e.preventDefault()
+          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => {
+                msg.innerHTML = "Message sent successfully"
+                setTimeout(function(){
+                    msg.innerHTML = ""
+                },5000)
+                form.reset()
+            })
+            .catch(error => console.error('Error!', error.message))
+        })
+      </script>
+
+      <!-- our aos data -->
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+        AOS.init({
+            offset:300,
+            duration:2000,
+        });
+      </script>
+</body>
+</html>
