--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </div>
     <!----------------------services------------------------------->
-    <div id = "services" data-aos="fade-right">
+    <div id = "services" data-aos="fade">
         <div class = "container">
             <h1 class="sub-title" id="myservices">My Services</h1>
             <div class="services-list">
@@ -99,7 +99,7 @@
         </div>
     </div>
     <!-- -------------------portfolio--------------------- -->
-    <div id="portfolio" data-aos="fade-left">
+    <div id="portfolio" data-aos="fade">
         <div class="container">
             <h1 class="sub-title" id = "mywork">My Work</h1>
             <div class = "work-list">
@@ -133,7 +133,7 @@
     </div>
 
     <!-- ----------------------contact------------------- -->
-    <div id = "contact" data-aos="fade-up">
+    <div id = "contact" data-aos="fade">
         <div class = "container">
             <div class="row">
                 <div class="contact-left">
@@ -225,7 +225,7 @@
       <script>
         AOS.init({
             offset:300,
-            duration:2000,
+            duration:1500,
         });
       </script>
 </body>
