--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="tab-contents" id = "education">
                         <ul>
-                            <li><span>Lovely Professional University, Jalandhar</span><br>B.Tech. CSE - <b>8.35</b> CGPA</li>
+                            <li><span>Lovely Professional University, Jalandhar</span><br>B.Tech. CSE - <b>8.12</b> CGPA</li>
                             <li><span>Simran Public School, Maihar</span><br>Class 12th - <b>76.6</b>%</li>
                             <li><span>Sarla Higher Secondary School, Maihar</span><br>Class 10th - <b>7.6</b> CGPA</li>
                         </ul>
@@ -101,7 +101,7 @@
                     <!-- <i class="fa-brands fa-app-store"></i> -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M13.483 0a1.374 1.374 0 0 0-.961.438L7.116 6.226l-3.854 4.126a5.266 5.266 0 0 0-1.209 2.104a5.35 5.35 0 0 0-.125.513a5.527 5.527 0 0 0 .062 2.362a5.83 5.83 0 0 0 .349 1.017a5.938 5.938 0 0 0 1.271 1.818l4.277 4.193l.039.038c2.248 2.165 5.852 2.133 8.063-.074l2.396-2.392c.54-.54.54-1.414.003-1.955a1.378 1.378 0 0 0-1.951-.003l-2.396 2.392a3.021 3.021 0 0 1-4.205.038l-.02-.019l-4.276-4.193c-.652-.64-.972-1.469-.948-2.263a2.68 2.68 0 0 1 .066-.523a2.545 2.545 0 0 1 .619-1.164L9.13 8.114c1.058-1.134 3.204-1.27 4.43-.278l3.501 2.831c.593.48 1.461.387 1.94-.207a1.384 1.384 0 0 0-.207-1.943l-3.5-2.831c-.8-.647-1.766-1.045-2.774-1.202l2.015-2.158A1.384 1.384 0 0 0 13.483 0zm-2.866 12.815a1.38 1.38 0 0 0-1.38 1.382a1.38 1.38 0 0 0 1.38 1.382H20.79a1.38 1.38 0 0 0 1.38-1.382a1.38 1.38 0 0 0-1.38-1.382z"/></svg>
                     <br><br><h2>LeetCode</h2>
-                    <p>I have solved <b>264</b> questions on LeetCode. I have given <b>11 contests</b> and my max. contest rating is <b>1696</b> under the handle <b>openair</b>.</p><br>
+                    <p>I have solved <b>483</b> questions on LeetCode. I have given <b>11 contests</b> and my max. contest rating is <b>1696</b> under the handle <b>openair</b>.</p><br>
                     <a href="https://leetcode.com/openair/" target="_blank">View profile</a>
                 </div>
                 <div>
@@ -109,16 +109,16 @@
                     <!-- html code for icon from fontawesome.com -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M21.45 14.315c-.143.28-.334.532-.565.745a3.691 3.691 0 0 1-1.104.695a4.51 4.51 0 0 1-3.116-.016a3.79 3.79 0 0 1-2.135-2.078a3.571 3.571 0 0 1-.13-.353h7.418a4.26 4.26 0 0 1-.368 1.008zm-11.99-.654a3.793 3.793 0 0 1-2.134 2.078a4.51 4.51 0 0 1-3.117.016a3.7 3.7 0 0 1-1.104-.695a2.652 2.652 0 0 1-.564-.745a4.221 4.221 0 0 1-.368-1.006H9.59c-.038.12-.08.238-.13.352zm14.501-1.758a3.849 3.849 0 0 0-.082-.475l-9.634-.008a3.932 3.932 0 0 1 1.143-2.348c.363-.35.79-.625 1.26-.809a3.97 3.97 0 0 1 4.484.957l1.521-1.49a5.7 5.7 0 0 0-1.922-1.357a6.283 6.283 0 0 0-2.544-.49a6.35 6.35 0 0 0-2.405.457a6.007 6.007 0 0 0-1.963 1.276a6.142 6.142 0 0 0-1.325 1.94a5.862 5.862 0 0 0-.466 1.864h-.063a5.857 5.857 0 0 0-.467-1.865a6.13 6.13 0 0 0-1.325-1.939A6 6 0 0 0 8.21 6.34a6.698 6.698 0 0 0-4.949.031A5.708 5.708 0 0 0 1.34 7.73l1.52 1.49a4.166 4.166 0 0 1 4.484-.958c.47.184.898.46 1.26.81c.368.36.66.792.859 1.268c.146.344.242.708.285 1.08l-9.635.008A4.714 4.714 0 0 0 0 12.457a6.493 6.493 0 0 0 .345 2.127a4.927 4.927 0 0 0 1.08 1.783c.528.56 1.17 1 1.88 1.293a6.454 6.454 0 0 0 2.504.457c.824.005 1.64-.15 2.404-.457a5.986 5.986 0 0 0 1.964-1.277a6.116 6.116 0 0 0 1.686-3.076h.273a6.13 6.13 0 0 0 1.686 3.077a5.99 5.99 0 0 0 1.964 1.276a6.345 6.345 0 0 0 2.405.457a6.45 6.45 0 0 0 2.502-.457a5.42 5.42 0 0 0 1.882-1.293a4.928 4.928 0 0 0 1.08-1.783A6.52 6.52 0 0 0 24 12.457a4.757 4.757 0 0 0-.039-.554z"/></svg>
                     <br><br><h2>GFG</h2>
-                    <p>I have solved <b>350</b> questions on GFG with coding score <b>649</b> under the handle <b>rajaishwaryasingh</b></p><br>
-                    <a href="https://auth.geeksforgeeks.org/user/rajaishwaryasingh/" target="_blank">View profile</a>
+                    <p>I have solved <b>549</b> questions on GFG with coding score <b>1363</b> under the handle <b>openair</b></p><br>
+                    <a href="https://auth.geeksforgeeks.org/user/openair/" target="_blank">View profile</a>
                 </div>
                 <div>
                     <!-- <i class="fa-solid fa-code"></i>       -->
                     <!-- html code for icon from fontawesome.com -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 512 512"><path fill="currentColor" d="M477.5 128C463 103.05 285.13 0 256.16 0S49.25 102.79 34.84 128s-14.49 230.8 0 256s192.38 128 221.32 128S463 409.08 477.49 384s14.51-231 .01-256zM316.13 414.22c-4 0-40.91-35.77-38-38.69c.87-.87 6.26-1.48 17.55-1.83c0-26.23.59-68.59.94-86.32c0-2-.44-3.43-.44-5.85h-79.93c0 7.1-.46 36.2 1.37 72.88c.23 4.54-1.58 6-5.74 5.94c-10.13 0-20.27-.11-30.41-.08c-4.1 0-5.87-1.53-5.74-6.11c.92-33.44 3-84-.15-212.67v-3.17c-9.67-.35-16.38-1-17.26-1.84c-2.92-2.92 34.54-38.69 38.49-38.69s41.17 35.78 38.27 38.69c-.87.87-7.9 1.49-16.77 1.84v3.16c-2.42 25.75-2 79.59-2.63 105.39h80.26c0-4.55.39-34.74-1.2-83.64c-.1-3.39.95-5.17 4.21-5.2c11.07-.08 22.15-.13 33.23-.06c3.46 0 4.57 1.72 4.5 5.38C333 354.64 336 341.29 336 373.69c8.87.35 16.82 1 17.69 1.84c2.88 2.91-33.62 38.69-37.58 38.69z"/></svg>
                     <br><br><h2>Hackerrank</h2>
-                    <p>I have solve <b>172</b> questions & have got <b>6 star</b> batch in problem solving & <b>5 star</b> batch in C, C++ & Python language on Hackerrank under the handle <b>rajaishwaryasin1</b></p><br>
-                    <a href="https://www.hackerrank.com/rajaishwaryasin1" target="_blank">View profile</a>
+                    <p>I have solve <b>172</b> questions & have got <b>6 star</b> batch in problem solving & <b>5 star</b> batch in C, C++ & Python language on Hackerrank under the handle <b>openair</b></p><br>
+                    <a href="https://www.hackerrank.com/openair" target="_blank">View profile</a>
                 </div>
                 <!-- <div>
                     <i class="fa-solid fa-code"></i>      
